--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,118 +9,37 @@
     tools:context=".MainActivity"
     android:id="@+id/root_layout">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tvResult"
-            style="@style/ResultRowStyle"
-        />
+        <TextView android:id="@+id/result" style="@style/ResultRow" />
+        <TextView android:id="@+id/expression" style="@style/ExpressionRow" />
 
-        <TextView
-            android:id="@+id/tvExpression"
-            style="@style/ExpressionRowStyle"
-        />
+        <LinearLayout style="@style/NumberButtonRow">
+            <TextView android:id="@+id/ten" style="@style/NumberButton" android:text="@string/button_10" />
+            <TextView android:id="@+id/twenty" style="@style/NumberButton" android:text="@string/button_20" />
+            <TextView android:id="@+id/thirty" style="@style/NumberButton" android:text="@string/button_30" />
+       </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tvTen"
-                style="@style/NumberButtonStyle"
-                android:text="10" />
-
-            <TextView
-                android:id="@+id/tvTwenty"
-                style="@style/NumberButtonStyle"
-                android:text="20" />
-
-            <TextView
-                android:id="@+id/tvThirty"
-                style="@style/NumberButtonStyle"
-                android:text="30" />
-
+        <LinearLayout style="@style/NumberButtonRow">
+            <TextView android:id="@+id/forty" style="@style/NumberButton" android:text="@string/button_40" />
+            <TextView android:id="@+id/fifty" style="@style/NumberButton" android:text="@string/button_50" />
+            <TextView android:id="@+id/sixty" style="@style/NumberButton" android:text="@string/button_60" />
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tvForty"
-                style="@style/NumberButtonStyle"
-                android:text="40" />
-
-            <TextView
-                android:id="@+id/tvFifty"
-                style="@style/NumberButtonStyle"
-                android:text="50" />
-
-            <TextView
-                android:id="@+id/tvSixty"
-                style="@style/NumberButtonStyle"
-                android:text="60" />
-
+        <LinearLayout style="@style/NumberButtonRow">
+            <TextView android:id="@+id/seventy" style="@style/NumberButton" android:text="@string/button_70" />
+            <TextView android:id="@+id/eighty" style="@style/NumberButton" android:text="@string/button_80" />
+            <TextView android:id="@+id/ninety" style="@style/NumberButton" android:text="@string/button_90" />
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/tvSeventy"
-                style="@style/NumberButtonStyle"
-                android:text="70" />
-
-            <TextView
-                android:id="@+id/tvEighty"
-                style="@style/NumberButtonStyle"
-                android:text="80" />
-
-            <TextView
-                android:id="@+id/tvNinety"
-                style="@style/NumberButtonStyle"
-                android:text="90" />
-
+        <LinearLayout style="@style/NumberButtonRow">
+            <TextView android:id="@+id/oneHundred" style="@style/NumberButton" android:text="@string/button_100" />
+            <TextView android:id="@+id/clear" style="@style/NumberButton" android:text="@string/button_clear" />
+            <TextView android:id="@+id/backup" style="@style/NumberButton" android:text="@string/button_back" />
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tvOneHundred"
-                style="@style/NumberButtonStyle"
-                android:text="100" />
-
-            <TextView
-                android:id="@+id/tvClear"
-                style="@style/NumberButtonStyle"
-                android:text="Clear" />
-
-            <TextView
-                android:id="@+id/tvBackup"
-                style="@style/NumberButtonStyle"
-                android:text="X" />
-
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/tvPayout"
-            style="@style/CalculateButtonStyle"
-            android:text="Pay Out"
-        />
+        <TextView android:id="@+id/payout" style="@style/CalculateButtonStyle" android:text="@string/button_payout"/>
 
     </LinearLayout>
 
