--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,13 +2,12 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="ResultRowStyle">
+    <style name="ResultRow">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">55sp</item>
         <item name="android:ellipsize">start</item>
@@ -19,7 +18,7 @@
         <item name="layout_constraintTop_toTopOf">parent</item>
     </style>
 
-    <style name="ExpressionRowStyle">
+    <style name="ExpressionRow">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">125sp</item>
         <item name="android:ellipsize">end</item>
@@ -29,7 +28,14 @@
         <item name="android:textSize">25sp</item>
     </style>
 
-    <style name="NumberButtonStyle">
+    <style name="NumberButtonRow">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:orientation">horizontal</item>
+    </style>
+
+    <style name="NumberButton">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_weight">1</item>
@@ -78,13 +84,13 @@
 
     <style name="BottomPopupRow">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_height">80dp</item>
         <item name="android:gravity">center</item>
     </style>
 
     <style name="BottomPopupButton">
         <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_height">80dp</item>
         <item name="android:layout_weight">1</item>
         <item name="android:background">@color/colorPrimaryDark</item>
         <item name="android:layout_margin">0.5dp</item>
